fixed styling of item divs so flex spacing is same and added type prop for ProfilePic for size

--- a/client/src/components/CommentBody/CommentBody.css
+++ b/client/src/components/CommentBody/CommentBody.css
@@ -24,21 +24,23 @@ body {
   text-align: left;
   height: 90%;
   margin-bottom: 0;
-}
-
-.CommentBody_center_item {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 11.3rem;
+  height: 9rem;
+}
+
+.CommentBody_center_item {
 }
 
 .CommentBody_name {
   text-align: center !important;
+  margin-bottom: 0;
+  font-size: 18px;
 }
 .CommentBody_activity {
   text-align: left;
-  margin-right: 0.4rem;
+  margin-right: 0.8rem;
   margin-top: 0.5rem;
   display: flex;
 }
